--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,6 +17,20 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
+    # Sonarqube
+    location /sonarqube/ {
+        proxy_pass http://sonarqube:9000/sonarqube/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+
     # Deployed Projects
     location /projects/ {
         alias /var/jenkins_home/projects/;
