--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    resolver 127.0.0.11 valid=30s;
 
     # Landing Page
     location / {
@@ -25,9 +26,6 @@ server {
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
     }
 
 
