--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,24 +10,32 @@ server {
 
     # Jenkins
     location /jenkins/ {
-        proxy_pass http://jenkins:8080/jenkins/;
+        set $upstream_jenkins jenkins:8080;
+        proxy_pass http://$upstream_jenkins/jenkins/;
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 30s;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Prefix /jenkins;
     }
 
-    # Sonarqube
+    # SonarQube
     location /sonarqube/ {
-        proxy_pass http://sonarqube:9000/sonarqube/;
+        set $upstream_sonarqube sonarqube:9000;
+        proxy_pass http://$upstream_sonarqube/sonarqube/;
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 30s;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
-
 
     # Deployed Projects
     location /projects/ {
