fix password expansion problem

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,31 +10,25 @@ server {
 
     # Jenkins
     location /jenkins/ {
-        set $upstream_jenkins jenkins:8080;
-        proxy_pass http://$upstream_jenkins/jenkins/;
-        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-        proxy_connect_timeout 5s;
-        proxy_read_timeout 30s;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Prefix /jenkins;
-    }
-
-    # SonarQube
-    location /sonarqube/ {
-        set $upstream_sonarqube sonarqube:9000;
-        proxy_pass http://$upstream_sonarqube/sonarqube/;
-        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-        proxy_connect_timeout 5s;
-        proxy_read_timeout 30s;
+        proxy_pass http://jenkins:8080/jenkins/;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # SonarQube
+    location /sonarqube/ {
+        proxy_pass http://sonarqube:9000/sonarqube/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+    location /js/ {
+        proxy_pass http://127.0.0.1:9000/js/;
     }
 
     # Deployed Projects
